# pdftoexecl

./: .gitignore  README.md  index.html  package-lock.json  package.json  probe_pdf.py  requirements.txt
converter/: convert_pdf.py
scripts/: build-portable.ps1  build-sidecar.ps1  dev.ps1  setup-dev.ps1  tauri-wrapper.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: PreviewModal.tsx  StatsHero.tsx  VersionModal.tsx
