[package]
name = "pdftoexecl"
version = "0.5.0"
description = "PDF quotation to Excel converter"
authors = ["jackal.chen"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "pdftoexecl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
